kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dlh
  labels:
    name: dlh
    environment: production
