kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dlh-app-service

  labels:
    app: dlh-app
spec:
  selector:
    app: dlh-app
  ports:
    - port: 80
      targetPort: 3000
      name: http
  type: ClusterIP
