kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dlh-app-ingress

  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https-dlh@kubernetescrd
spec:
  tls:
    - hosts:
        - dlh-pertek.isacitra.com
      secretName: dlh-tls-secret
  rules:
    - host: dlh-pertek.isacitra.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dlh-app-service
                port:
                  number: 80
